fix: missed a slug

--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -74,7 +74,7 @@ services:
       - {{Slug}}-data:/var/lib/postgresql/data:cached
 
 volumes:
-  thrubit-data:
+  {{Slug}}-data:
 
 networks:
   {{Slug}}:
