--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "class-transformer": "^0.3.1",
     "class-transformer-validator": "^0.9.1",
     "class-validator": "^0.12.2",
+    "lodash": "^4.17.20",
     "reflect-metadata": "^0.1.13",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
@@ -25,6 +26,8 @@
     "vuex-persist": "^3.1.0"
   },
   "devDependencies": {
+    "@mdi/font": "^5.6.55",
+    "@types/lodash": "^4.14.161",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
